# fdk-organization-bff

./: .dockerignore  .flake8  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: constraints.txt  coverage.yml  deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-organization-bff.yaml  kustomization.yaml  service-fdk-organization-bff.yaml
deploy/demo/: env.yaml
deploy/prod/: env.yaml
deploy/staging/: env.yaml
mock/: aggregations.json  different_orgpath_aggregations.json  different_orgpath_aggregations_numbers.json
mock/mappings/: apis-00a3b1fe-4b7d-416d-86ca-db6a45736aa5.json  apis-01896805-d09d-497e-a91f-1563326ba468.json  apis-02e84e51-1ddc-4711-b746-c195917a5fc1.json  apis-036d3e08-43e7-45e0-81d7-d022eb9db28a.json  apis-04661b8f-5ead-465f-8ddf-a39376b8d385.json  apis-0497b75e-07a2-4267-861b-ac5b8b4e76eb.json  apis-05823554-f6f6-48d1-8bff-372b0aeebb55.json  apis-05cdcf1e-f82c-4ce7-afe8-f1de8779bb94.json  apis-0664927f-7b97-4d7f-a73c-824cc6defcb6.json  apis-071b4cfc-9150-447b-b11d-5b8b1f99abe3.json  apis-08328317-b326-418d-a24b-074de07b5609.json  apis-08570dcc-0ccd-447c-8f89-6402915e9b6e.json  apis-09494374-30f2-4155-82de-0c542edb5e7a.json  apis-09d01457-f06f-434f-8d58-7b1c3aa100d4.json  apis-0b3c805f-79cd-4a6d-895c-ed4ca4dd3854.json  apis-0b3ed17e-610c-4738-979f-aeb575650d20.json  apis-0b80c5c3-a842-4dd5-95a7-a85e525efa3a.json  apis-0b931803-ba89-446f-a6e8-31e9c46e2324.json  apis-0b93b7e0-7003-420b-b7c5-56f2259cb513.json  apis-0bc9bb67-0f93-48d7-bf0c-ee95888ab742.json  apis-0c15f75a-8f10-48cc-adea-d0bb479d62f2.json  apis-0cdb8311-1d17-4b87-9ca4-8a5bb9393b79.json  apis-0d10efde-5179-4413-b7f4-12d3edd3b8fa.json  apis-0d1a0910-648c-4af0-ae4f-fd3ffaa531bd.json  apis-0e62b635-b189-4d77-91af-8d8aaaed4dc0.json  apis-0ebde84a-dc30-473c-b643-b4899abd1338.json  apis-0f5b52ec-da0e-4d3d-a7c7-89b67a235f39.json  apis-0fddb1bc-5637-401c-9e1a-9d9d954f46d1.json  apis-0fe6d63e-6cc9-4a51-8f4f-919f296abfff.json  apis-10164772-9813-4938-a940-a0b4e60dbc8d.json  apis-10bbe292-3a7d-4e29-912e-e3b9b73a4706.json  apis-11b3cda2-44eb-44c2-83bb-0e49a3fefd2c.json  apis-11d94d4c-cf29-4ed8-8a44-e1af87ad10a6.json  apis-11eec4c2-31bd-412f-ae90-b18b0b74c636.json  apis-128aa15b-837a-4ac8-b7c8-e1b373394ddd.json  apis-13213bb1-09c7-49b2-9122-3956f833a7ce.json  apis-13900895-7087-4de5-9d9a-14e9df14d95b.json  apis-1390348f-e6c7-4926-9485-aaa83ad144fa.json  apis-13d52acc-6c93-4071-bcd0-56fc7aa85443.json  apis-149b255e-fd12-4144-8922-d958bf4d6ea9.json  (+2143 more)
mock_mappings/mappings/: sparql-from-concepts-7ae7a4ad-1c7c-47a1-8f83-c154ca98dbba.json  sparql-from-concepts-910258028-0c8a2616-6a9b-4394-b0e3-33074d8c870f.json  sparql-from-concepts-974767880-f3c0e9ca-934e-4ea1-bc1d-4e496da56b54.json  sparql-from-dataservices-231595e6-0ef7-4224-8b37-9b8f164aa528.json  sparql-from-dataservices-910244132-95a4739c-fe68-4b36-919e-896df9830219.json  sparql-from-dataservices-910258028-ba92a50c-5ef0-406f-82b4-3b5b0a008152.json  sparql-from-datasets-767627a7-28c2-4d65-b5ce-835effab0ee5.json  sparql-from-datasets-910244132-ab8001c4-966b-4e44-b617-93b4c4675a6b.json  sparql-from-datasets-910244132-ed239cd1-4289-4e77-a2bb-daeabef7a573.json  sparql-from-datasets-910258028-3a7e8201-a9cd-4746-ba0e-489392e5f655.json  sparql-from-datasets-NAP-f0ba32c5-88b2-48b9-94fc-399c14d3ac59.json  sparql-from-informationmodels-09356022-3b25-41f3-8bed-bf475c8e1a4b.json  (+1 more)
src/: aggregation.py  elasticsearch.py  endpoints.py  responses.py  service_requests.py  utils.py
tests/: conftest.py  docker-compose.contract.yml  responses.py  test_aggregation.py  test_responses.py  test_service_requests.py
tests/unit/: test_app.py  (+6 more)
(+20 files in other folders)
