[tool.poetry]
name = "fdk-organization-bff"
version = "0.1.0"
description = "Backend-for-frontend service that provides content for fdk portal's organization pages. "
authors = ["Nils Ove Tendenes <nils.ove@tendenes.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/fdk-organization-bff"
repository = "https://github.com/Informasjonsforvaltning/fdk-organization-bff"
classifiers=[
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.0"
requests = "^2.32.5"
aiohttp = "^3.12.15"
python-json-logger = "^3.3.0"
aiohttp-middlewares = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
coverage = {extras = ["toml"], version = "^7.10.5"}
pytest-asyncio = "^1.1.0"
pytest-dotenv = "^0.5.2"
pytest-docker = "^3.1.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
flake8 = "^7.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.8.19"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.2"
pep8-naming = "^0.15.1"
mypy = "^1.17.1"
flake8-annotations = "^3.1.1"
codecov = "^2.1.13"
requests-mock = "^1.11.0"
pytest-mock = "^3.12.0"
pytest-aiohttp = "^1.0.5"

[tool.poetry.group.dev.dependencies]
nox-poetry = "^1.2.0"
safety = "^3.6.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["fdk_organization_bff"]
omit = ["*__init__.py", "*gunicorn_config.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
