[tool.poetry]
name = "fdk-organization-bff"
version = "0.1.0"
description = "Backend-for-frontend service that provides content for fdk portal's organization pages. "
authors = ["Nils Ove Tendenes <nils.ove@tendenes.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/fdk-organization-bff"
repository = "https://github.com/Informasjonsforvaltning/fdk-organization-bff"
classifiers=[
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
gunicorn = "^24.1.1"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
aiohttp = "^3.13.2"
python-json-logger = "^4.0.0"
aiohttp-middlewares = "^2.4.0"
pip = "^25.3"

[tool.poetry.dev-dependencies]
pytest = "^9.0.2"
coverage = {extras = ["toml"], version = "^7.13.0"}
pytest-asyncio = "^1.3.0"
pytest-dotenv = "^0.5.2"
pytest-docker = "^3.2.5"
pytest-cov = "^7.0.0"
black = "^25.12.0"
flake8 = "^7.3.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.11.29"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.2"
pep8-naming = "^0.15.1"
mypy = "^1.19.1"
flake8-annotations = "^3.2.0"
codecov = "^2.1.13"
requests-mock = "^1.12.1"
pytest-mock = "^3.15.1"
pytest-aiohttp = "^1.1.0"

[tool.poetry.group.dev.dependencies]
nox-poetry = "^1.2.0"
pip-audit = "^2.7.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["fdk_organization_bff"]
omit = ["*__init__.py", "*gunicorn_config.py", "*report_service.py", "*reports.py"]

[tool.coverage.report]
show_missing = true
fail_under = 89

[build-system]
requires = ["poetry>=1.8.5"]
build-backend = "poetry.masonry.api"
